--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -47,16 +47,16 @@
             <elvia-card [header]="'Header'" [description]="'Hover me!'">
               <div slot="icon">91</div>
               <div slot="iconHover">92</div>
-              <i slot="cornerIcon" class="e-icon e-icon--lock e-icon--xs"></i>
+              <i slot="cornerIcon" class="e-icon e-icon--lock e-icon--xs" aria-hidden="true"></i>
             </elvia-card>
           </a>
         </div>
         <div class="col-sm-4 col-md-3 col-lg-3 col-xl-2dot4">
           <a [routerLink]="['/components/card']">
             <elvia-card [header]="'Hover!'" [borderColor]="'red'">
-              <i slot="icon" class="e-icon e-icon--search-bold e-icon--md"></i>
-              <i slot="iconHover" class="e-icon e-icon--search-bold-color e-icon--md"></i>
-              <i slot="cornerIcon" class="e-icon e-icon--unlock e-icon--xs"></i>
+              <i slot="icon" class="e-icon e-icon--search-bold e-icon--md" aria-hidden="true"></i>
+              <i slot="iconHover" class="e-icon e-icon--search-bold-color e-icon--md" aria-hidden="true"></i>
+              <i slot="cornerIcon" class="e-icon e-icon--unlock e-icon--xs" aria-hidden="true"></i>
             </elvia-card>
           </a>
         </div>
@@ -65,16 +65,15 @@
             <elvia-card
               [header]="'Title3'"
               [description]="'description3'"
-              [icon]="'3'" aria-hidden="true"></i>
+              [icon]="'3'"
               [borderColor]="'green'"
             ></elvia-card>
           </a>
         </div>
       </div>
     </div>
-  </div> aria-hidden="true"></i>
- aria-hidden="true"></i>
-  <!--Carousel--> aria-hidden="true"></i>
+  </div>
+  <!--Carousel-->
   <div class="example-wrapper">
     <h3>Carousel</h3>
     <elvia-carousel>
