--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -1060,30 +1060,6 @@ input:focus {
 }
 
 :root {
-  --e-green: #29d305;
-}
-
-.e-text-green {
-  color: #29d305 !important;
-}
-.e-bg-green {
-  background: #29d305 !important;
-  color: #000 !important;
-}
-
-:root {
-  --e-elvia-charge: #29d305;
-}
-
-.e-text-elvia-charge {
-  color: #29d305 !important;
-}
-.e-bg-elvia-charge {
-  background: #29d305 !important;
-  color: #000 !important;
-}
-
-:root {
   --e-yellow: #ffff00;
 }
 
@@ -1108,6 +1084,18 @@ input:focus {
 }
 
 :root {
+  --e-warning: #ffa000;
+}
+
+.e-text-warning {
+  color: #ffa000 !important;
+}
+.e-bg-warning {
+  background: #ffa000 !important;
+  color: #000 !important;
+}
+
+:root {
   --e-red: #ee0701;
 }
 
@@ -1115,6 +1103,18 @@ input:focus {
   color: #ee0701 !important;
 }
 .e-bg-red {
+  background: #ee0701 !important;
+  color: #000 !important;
+}
+
+:root {
+  --e-error: #ee0701;
+}
+
+.e-text-error {
+  color: #ee0701 !important;
+}
+.e-bg-error {
   background: #ee0701 !important;
   color: #000 !important;
 }
@@ -1192,6 +1192,30 @@ input:focus {
 }
 
 :root {
+  --e-green: #29d305;
+}
+
+.e-text-green {
+  color: #29d305 !important;
+}
+.e-bg-green {
+  background: #29d305 !important;
+  color: #000 !important;
+}
+
+:root {
+  --e-elvia-charge: #29d305;
+}
+
+.e-text-elvia-charge {
+  color: #29d305 !important;
+}
+.e-bg-elvia-charge {
+  background: #29d305 !important;
+  color: #000 !important;
+}
+
+:root {
   --e-grey-90: #3b3b3b;
 }
 
@@ -1228,6 +1252,18 @@ input:focus {
 }
 
 :root {
+  --e-text-light: #515151;
+}
+
+.e-text-text-light {
+  color: #515151 !important;
+}
+.e-bg-text-light {
+  background: #515151 !important;
+  color: #fff !important;
+}
+
+:root {
   --e-grey-70: #676767;
 }
 
@@ -1235,6 +1271,18 @@ input:focus {
   color: #676767 !important;
 }
 .e-bg-grey-70 {
+  background: #676767 !important;
+  color: #fff !important;
+}
+
+:root {
+  --e-placeholder: #676767;
+}
+
+.e-text-placeholder {
+  color: #676767 !important;
+}
+.e-bg-placeholder {
   background: #676767 !important;
   color: #fff !important;
 }
@@ -1295,6 +1343,18 @@ input:focus {
   color: #bdbdbd !important;
 }
 .e-bg-disabled {
+  background: #bdbdbd !important;
+  color: #000 !important;
+}
+
+:root {
+  --e-light-inverted: #bdbdbd;
+}
+
+.e-text-light-inverted {
+  color: #bdbdbd !important;
+}
+.e-bg-light-inverted {
   background: #bdbdbd !important;
   color: #000 !important;
 }
@@ -1372,6 +1432,18 @@ input:focus {
 }
 
 :root {
+  --e-elvis-on: #fff;
+}
+
+.e-text-elvis-on {
+  color: #fff !important;
+}
+.e-bg-elvis-on {
+  background: #fff !important;
+  color: #000 !important;
+}
+
+:root {
   --e-elvia-on: #fff;
 }
 
@@ -1396,6 +1468,18 @@ input:focus {
 }
 
 :root {
+  --e-elvia-inverted: #fff;
+}
+
+.e-text-elvia-inverted {
+  color: #fff !important;
+}
+.e-bg-elvia-inverted {
+  background: #fff !important;
+  color: #000 !important;
+}
+
+:root {
   --e-black: #000;
 }
 
@@ -1408,13 +1492,13 @@ input:focus {
 }
 
 :root {
-  --e-font-color: #000;
+  --e-elvis-off: #000;
 }
 
-.e-text-font-color {
+.e-text-elvis-off {
   color: #000 !important;
 }
-.e-bg-font-color {
+.e-bg-elvis-off {
   background: #000 !important;
   color: #fff !important;
 }
@@ -1432,6 +1516,30 @@ input:focus {
 }
 
 :root {
+  --e-font-color: #000;
+}
+
+.e-text-font-color {
+  color: #000 !important;
+}
+.e-bg-font-color {
+  background: #000 !important;
+  color: #fff !important;
+}
+
+:root {
+  --e-text: #000;
+}
+
+.e-text-text {
+  color: #000 !important;
+}
+.e-bg-text {
+  background: #000 !important;
+  color: #fff !important;
+}
+
+:root {
   --e-grey: #262626;
 }
 
@@ -1439,6 +1547,18 @@ input:focus {
   color: #262626 !important;
 }
 .e-bg-grey {
+  background: #262626 !important;
+  color: #fff !important;
+}
+
+:root {
+  --e-elvia-dark: #262626;
+}
+
+.e-text-elvia-dark {
+  color: #262626 !important;
+}
+.e-bg-elvia-dark {
   background: #262626 !important;
   color: #fff !important;
 }
@@ -2388,13 +2508,6 @@ input:focus {
   width: 8px;
   height: 8px;
 }
-.e-chip.e-chip--green {
-  position: relative;
-  background: rgba(41, 211, 5, 0.25);
-}
-.e-chip.e-chip--green.e-chip---disabled, .e-chip.e-chip--green:disabled {
-  background: rgba(41, 211, 5, 0.065);
-}
 .e-chip.e-chip--yellow {
   position: relative;
   background: rgba(255, 255, 0, 0.25);
@@ -2457,6 +2570,13 @@ input:focus {
 }
 .e-chip.e-chip--red-tomato.e-chip---disabled, .e-chip.e-chip--red-tomato:disabled {
   background: rgba(185, 2, 2, 0.065);
+}
+.e-chip.e-chip--green {
+  position: relative;
+  background: rgba(41, 211, 5, 0.25);
+}
+.e-chip.e-chip--green.e-chip---disabled, .e-chip.e-chip--green:disabled {
+  background: rgba(41, 211, 5, 0.065);
 }
 .e-chip:active, .e-chip---hover:not(:disabled):not(.e-chip---disabled) {
   background: #29d305;
@@ -3570,7 +3690,7 @@ input:focus {
   }
 }
 
-.e-label.e-label--grey::before, .e-label.e-label--black::before, .e-label.e-label--white::before, .e-label.e-label--red-tomato::before, .e-label.e-label--orange-mango::before, .e-label.e-label--purple-plum::before, .e-label.e-label--blue-berry::before, .e-label.e-label--violet-grape::before, .e-label.e-label--green-apple::before, .e-label.e-label--red::before, .e-label.e-label--orange::before, .e-label.e-label--yellow::before, .e-label.e-label--green::before {
+.e-label.e-label--grey::before, .e-label.e-label--black::before, .e-label.e-label--white::before, .e-label.e-label--green::before, .e-label.e-label--red-tomato::before, .e-label.e-label--orange-mango::before, .e-label.e-label--purple-plum::before, .e-label.e-label--blue-berry::before, .e-label.e-label--violet-grape::before, .e-label.e-label--green-apple::before, .e-label.e-label--red::before, .e-label.e-label--orange::before, .e-label.e-label--yellow::before {
   display: inline-flex;
   border-radius: 50%;
   height: 8px;
@@ -3593,14 +3713,6 @@ input:focus {
   text-transform: uppercase;
   color: #000;
   white-space: nowrap;
-}
-.e-label.e-label--green {
-  padding: 4px 8px 4px 24px;
-}
-.e-label.e-label--green::before {
-  content: " ";
-  position: absolute;
-  background-color: #29d305;
 }
 .e-label.e-label--yellow {
   padding: 4px 8px 4px 24px;
@@ -3673,6 +3785,14 @@ input:focus {
   content: " ";
   position: absolute;
   background-color: #b90202;
+}
+.e-label.e-label--green {
+  padding: 4px 8px 4px 24px;
+}
+.e-label.e-label--green::before {
+  content: " ";
+  position: absolute;
+  background-color: #29d305;
 }
 .e-label.e-label--white {
   padding: 4px 8px 4px 24px;
