--- a/packages/elvis/src/variables/colors.scss
+++ b/packages/elvis/src/variables/colors.scss
@@ -1,6 +1,7 @@
 @use 'sass:list';
 @use 'sass:map';
 @use 'sass:meta';
+@use '@elvia/elvis-colors/dist/colorMap.scss' as ColorMap;
 @function color-map($name, $color-set: $colors) {
   $color-map: null;
 
@@ -44,159 +45,19 @@
   @return map.get($map, color);
 }
 
-// All colors as a list
-// REMEMBER TO UPDATE THE DOCUMENTATION ALSO: color-doc -> color.ts
-$primary-colors: (
-  'white': (
-    color: #fff,
-    alt-labels: (
-      elvia-on,
-      font-color-light,
-    ),
-    contrastText: #000,
-  ),
-  'black': (
-    color: #000,
-    alt-labels: (
-      font-color,
-      elvia-off,
-    ),
-    contrastText: #fff,
-  ),
-  'grey': (
-    color: #262626,
-    contrastText: #fff,
-  ),
-  'green': (
-    color: #29d305,
-    alt-labels: (
-      elvia-charge,
-    ),
-    contrastText: #000,
-  ),
-);
-
-$signal-colors: (
-  'green': (
-    color: #29d305,
-    rgb: rgb(41, 211, 5),
-    alt-labels: (
-      elvia-charge,
-    ),
-    contrastText: #000,
-  ),
-  'yellow': (
-    color: #ffff00,
-    rgb: rgb(255, 255, 0),
-    contrastText: #000,
-  ),
-  'orange': (
-    color: #ffa000,
-    rgb: rgb(255, 160, 0),
-    contrastText: #000,
-  ),
-  'red': (
-    color: #ee0701,
-    rgb: rgb(255, 0, 0),
-    contrastText: #000,
-  ),
-);
-
-$data-colors: (
-  'green-apple': (
-    color: #21ac04,
-    rgb: rgb(33, 172, 4),
-    contrastText: #000,
-  ),
-  'violet-grape': (
-    color: #490192,
-    rgb: rgb(73, 1, 146),
-    contrastText: #fff,
-  ),
-  'blue-berry': (
-    color: #006ddb,
-    rgb: rgb(0, 109, 219),
-    contrastText: #fff,
-  ),
-  'purple-plum': (
-    color: #b66dff,
-    rgb: rgb(182, 109, 255),
-    contrastText: #000,
-  ),
-  'orange-mango': (
-    color: #db6d00,
-    rgb: rgb(219, 109, 0),
-    contrastText: #000,
-  ),
-  'red-tomato': (
-    color: #b90202,
-    rgb: rgb(185, 2, 2),
-    contrastText: #fff,
-  ),
-);
-
-$greys: (
-  'grey-90': (
-    color: #3b3b3b,
-    contrastText: #fff,
-  ),
-  'grey-80': (
-    color: #515151,
-    contrastText: #fff,
-    alt-labels: (
-      font-grey,
-    ),
-  ),
-  'grey-70': (
-    color: #676767,
-    contrastText: #fff,
-  ),
-  'grey-60': (
-    color: #7c7c7c,
-    contrastText: #000,
-  ),
-  'grey-50': (
-    color: #929292,
-    contrastText: #000,
-  ),
-  'grey-40': (
-    color: #a8a8a8,
-    contrastText: #000,
-  ),
-  'grey-30': (
-    color: #bdbdbd,
-    contrastText: #000,
-    alt-labels: (
-      disabled,
-    ),
-  ),
-  'grey-20': (
-    color: #d3d3d3,
-    contrastText: #000,
-  ),
-  'grey-10': (
-    color: #e9e9e9,
-    contrastText: #000,
-  ),
-  'grey-05': (
-    color: #f4f4f4,
-    contrastText: #000,
-    alt-labels: (
-      disabled-light,
-    ),
-  ),
-  'grey-02': (
-    color: #fafafa,
-    contrastText: #000,
-  ),
-);
+$primary-colors: ColorMap.$primary-colors;
+$signal-colors: ColorMap.$signal-colors;
+$data-colors: ColorMap.$data-colors;
+$greys: ColorMap.$grey-colors;
 
 $just-colors: map-merge($signal-colors, $data-colors);
+// just-colors needs to also contain elvia-green (with an rgb value) for legacy
+$just-colors: map.set(
+  $just-colors,
+  'green',
+  map.set(map.get($primary-colors, 'green'), rgb, rgb(41, 211, 5))
+);
 $grey-primary: map-merge($greys, $primary-colors);
 $colors: map-merge($just-colors, $grey-primary);
 
-$internal-colors: (
-  'focus-outline': (
-    color: #0064fa,
-  ),
-);
+$internal-colors: ColorMap.$internal-colors;
